--- a/projektNaukowy.html
+++ b/projektNaukowy.html
@@ -77,6 +77,7 @@
             console.log(data);
             console.log(data.results);
 
+              //tutaj dodam jakieś zmiany aby sprawdzić czy to działa  
             var numer;
             for (numer = 0; numer < 6; numer++) {
                     mainPopularDiv = document.getElementById("test");
