--- a/projektNaukowy.html
+++ b/projektNaukowy.html
@@ -76,8 +76,7 @@
 
             console.log(data);
             console.log(data.results);
-
-              //tutaj dodam jakieś zmiany aby sprawdzić czy to działa  
+ 
             var numer;
             for (numer = 0; numer < 6; numer++) {
                     mainPopularDiv = document.getElementById("test");
@@ -113,6 +112,8 @@
 
             console.log(data);
             console.log(data.results);
+
+            //a tu dodaje
 
             var numer;
             for (numer = 0; numer < 6; numer++) {
